[workspace]
members = [
    "gradients_bench_quad",
    "gradients_bench_triangle",
    "solids_bench_quad",
    "solids_bench_triangle",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bungoboingo/iced_benches.git"
licence = "MIT"

[workspace.dependencies]
iced = { git = "https://github.com/bungoboingo/iced.git", branch = "feat/background-gradients" }
env_logger = "0.10.0"