[package]
name = "gradients_bench_triangle"
description = "static triangle pipeline benchmarks for gradients"
version.workspace = true
edition.workspace = true
repository.workspace = true
licence.workspace = true

[dependencies]
iced = { workspace = true, features = ["canvas"] }
env_logger.workspace = true